# multi-object-tracker

./: .gitignore  CNAME  CONTRIBUTING.md  DOWNLOAD_WEIGHTS.md  LICENSE  README.md  REFERENCES.md  _config.yml  pyproject.toml  requirements.txt  setup.py  tracking-caffe-model.ipynb  tracking-tensorflow-ssd_mobilenet_v2_coco_2018_03_29.ipynb  tracking-yolo-model.ipynb  tracking.ipynb
.github/workflows/: python-publish.yml  tests.yml
docs/: .buildinfo  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/_modules/: index.html
docs/_sources/: index.rst.txt
docs/_static/: documentation_options.js
docs/includeme/: apidocuments.html  readmefile.html
docs/readme/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  REFERENCES.md
docs/source/: conf.py  index.rst
examples/: IOUTracker-caffe-model-mobilenetSSD.ipynb  SimpleTracker-caffe-model-mobilenetSSD.ipynb  SimpleTracker-tensorflow-ssd_mobilenet_v2_coco_2018_03_29.ipynb  SimpleTracker-yolo-model.ipynb  SimpleTracker2-caffe-model-mobilenetSSD.ipynb  readme.md  tracking-caffe-model-mobilenetSSD.ipynb
examples/example_notebooks/: IOUTracker-caffe-model-mobilenetSSD.ipynb  SimpleTracker-caffe-model-mobilenetSSD.ipynb  SimpleTracker-yolo-model.ipynb  (+9 more)
motrackers/: __init__.py  centroid_kf_tracker.py  iou_tracker.py  kalman_tracker.py  simple_tracker.py  simple_tracker2.py  sort_tracker.py  track.py  tracker.py  tracker_img.py
tensorflow_model_dir/: get_ssd_model.sh
tests/: test_track.py  test_trackers.py  test_utils.py
video_data/: readme.md
(+39 files in other folders)
