[project]
name = "motrackers"
version = "0.0.1"
description = "Multi-object trackers in Python"
authors = [
    {name = "Aditya M. Deshpande", email = "adityadeshpande2010@gmail.com"}
]
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">3.6"

keywords = ["tracking", "object", "multi-object", "python"]

classifiers = [
"Programming Language :: Python :: 3"
]

dependencies = [
"numpy",
"scipy",
"matplotlib",
"opencv-python",
"pandas",
"motmetrics",
"setuptools",
"ipyfilechooser"
]

[project.optional-dependencies]
docs = [
    'sphinx',
    'm2r2'
]

[project.urls]
homepath = "https://adipandas.github.io/multi-object-tracker"
repository = "https://github.com/adipandas/multi-object-tracker"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# [https://setuptools.pypa.io/en/stable/userguide/datafiles.html](https://setuptools.pypa.io/en/stable/userguide/datafiles.html)

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
